// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`../index.js Auth0Context should be configured properly 1`] = `
Object {
  "Provider": [Function],
  "displayName": "Auth0Context",
}
`;

exports[`../index.js Auth0Provider (client {}) should render 1`] = `
<div
  className="Auth0ContextProvider"
  value={
    Object {
      "login": [Function],
      "logout": [Function],
      "user": Object {},
    }
  }
>
  children
</div>
`;

exports[`../index.js Auth0Provider (client null) should render 1`] = `
<div
  className="Auth0ContextProvider"
  value={
    Object {
      "login": [Function],
      "logout": [Function],
      "user": Object {},
    }
  }
/>
`;

exports[`../index.js external dependencies prop-types should match the installed version 1`] = `"^15.7.2"`;

exports[`../index.js external dependencies react should match the installed version 1`] = `"^16.10.1"`;

exports[`../index.js local dependencies ../initAuth0 should match the saved hash 1`] = `"6c23ae1833abde752bb3cd1e9ac5146b04d7bb71e075f8a28791f1d876fb9405"`;

exports[`../index.js local dependencies ../makeLoginFunction should match the saved hash 1`] = `"a81c520f84391e459777a9f071c77f795fd14ff5b880d6979f283308a12c25a6"`;

exports[`../index.js local dependencies ../makeLogoutFunction should match the saved hash 1`] = `"6a4f80d82141900770e8a53470cb178c358e4cd24c85d26f81bebb812980f578"`;
